--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGODB_URL='mongodb+srv://user1:User1234@cluster0.cqgou.mongodb.net/Grocery?retryWrites=true&w=majority'
+MONGO_USER=user1
+MONGO_PASSWORD=User1234
 SESSION_SECRET=afljhalekfj;afjhdlkjfnskjgdnlak,mdnf
